--- a/app/components/contact.css
+++ b/app/components/contact.css
@@ -36,6 +36,7 @@
 @media screen and (max-width: 900px), screen and (max-device-width: 900px) {
   .contacts{
     bottom: 15vmin;
+    z-index: 99;
   }
   .contacts ul li a{
     margin: 0 15px;
