--- a/app/main/main.css
+++ b/app/main/main.css
@@ -78,8 +78,8 @@ a{
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ceb640', endColorstr='#76aeae',GradientType=1 );
 }
 .works-div{
-  background: #37383A;
-  color: #F3F3F3;
+  background: #F3F3F3;
+  color: #37383A;
 }
 
 /*== Mobile css == all sizes in px ==*/
@@ -88,7 +88,7 @@ a{
     display: block;
     position: absolute;
     bottom: 0;
-    width: auto;
+    width: 100%;
     height: 95%;
     z-index: 91;
     opacity: 0.3;
